syntax = "proto3";

option go_package = "pb";


message Employee{
    int32 id =  1;
    int32 badgeNumber  = 2;
    string firstname = 3;
    string lastname = 4;
}

message EmployeeRequest{}


message EmployeeResponse{
    Employee employee = 1;

}


service EmployeeService{
    rpc GetAllEmployees(EmployeeRequest) returns (EmployeeResponse);
}